Force overflow off on #right -- this is why we should never use !important -- because once you add one you always need two more to fix downstream stuff.

--- a/client/src/style/scss/base.scss
+++ b/client/src/style/scss/base.scss
@@ -160,7 +160,7 @@ body {
     @extend .unified-panel;
     right: 0px;
     width: $panel-width;
-    overflow: unset;
+    overflow: unset !important;
 }
 #right > .unified-panel-footer {
     .drag {
